--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "dependencies": {
+    "angular-ui-router": "^1.0.0-beta.3",
     "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-filter": "^1.0.2",
@@ -16,8 +17,7 @@
     "gulp-sourcemaps": "^1",
     "gulp-uglify": "^1",
     "jshint-stylish": "^2",
-    "main-bower-files": "^2.1.0",
-    "@angular/router": "^0.2.0"
+    "main-bower-files": "^2.1.0"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
