--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "dev": "gulp watch"
   },
   "dependencies": {
+    "angular-cookies": "^1.6.1",
+    "angular-file-upload": "^2.4.1",
+    "angular-slider-easy": "^1.1.0",
     "angular-ui-router": "^1.0.0-beta.3",
+    "angular-xeditable": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-filter": "^1.0.2",
@@ -17,7 +21,8 @@
     "gulp-sourcemaps": "^1",
     "gulp-uglify": "^1",
     "jshint-stylish": "^2",
-    "main-bower-files": "^2.1.0"
+    "main-bower-files": "^2.1.0",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
