--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "dependencies": {
     "angular-cookies": "^1.6.1",
     "angular-file-upload": "^2.4.1",
+    "angular-rangeslider": "0.0.14",
     "angular-slider-easy": "^1.1.0",
+    "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^1.0.0-beta.3",
+    "angular-utils-pagination": "^0.11.1",
     "angular-xeditable": "^0.6.0",
+    "bootstrap-slider": "^9.7.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-sourcemap": "^1.3.1",
     "gulp-filter": "^1.0.2",
